# aoc2023

./: .coveragerc  LICENSE.txt  README.md  setup.cfg  setup.py  tox.ini
src/aoc2023/: core.py  day0.py  day1.py  day2.py
tests/: conftest.py  test_core.py  test_day1.py  test_day2.py
