[metadata]
name = aoc2023
description = A python try for Advent of Code 2023
author = Cian Synnott
author_email = cian@emauton.org
license = MIT
url = https://github.com/emauton/aoc2023
platforms = any

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
    pygments
    sympy

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    pytest-flake8-v2

[options.entry_points]
console_scripts =
    aoc = aoc2023.core:main

[tool:pytest]
addopts =
    --cov aoc2023 --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[flake8]
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
